--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,9 +36,12 @@ jobs:
 
       # Zet de bestanden in de gewenste map (bijvoorbeeld ai/)
       - name: Move files to ai folder
-        run: |
-          mkdir -p ai
-          cp -r * ai/
+  run: |
+    mkdir -p ai
+    # Kopieer alles behalve de ai map
+    shopt -s extglob
+    cp -r !("ai") ai/
+
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
